// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StatusBadge > Snapshot Testing > matches snapshot for active status 1`] = `
<div>
  <span
    class="inline-flex items-center font-medium rounded-full bg-green-100 text-green-800 dark:bg-green-900/30 dark:text-green-400 px-2.5 py-1 text-xs"
  >
    Active
  </span>
</div>
`;

exports[`StatusBadge > Snapshot Testing > matches snapshot for large size 1`] = `
<div>
  <span
    class="inline-flex items-center font-medium rounded-full bg-green-100 text-green-800 dark:bg-green-900/30 dark:text-green-400 px-3 py-1.5 text-sm"
  >
    Approved
  </span>
</div>
`;

exports[`StatusBadge > Snapshot Testing > matches snapshot for small size 1`] = `
<div>
  <span
    class="inline-flex items-center font-medium rounded-full bg-yellow-100 text-yellow-800 dark:bg-yellow-900/30 dark:text-yellow-400 px-2 py-0.5 text-xs"
  >
    Pending
  </span>
</div>
`;
